<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">meucomp</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_11_35">11:35</string>
<string name="msg_qual_o_seu_sobr">Qual o seu sobrenome?</string>
<string name="lbl_13_15">13:15</string>
<string name="lbl_12_04">12/04</string>
<string name="msg_registros_de_si">Registros de Sintomas</string>
<string name="lbl_hora">Hora</string>
<string name="lbl_23">23</string>
<string name="lbl_q">Q</string>
<string name="lbl_24">24 </string>
<string name="lbl_21">21</string>
<string name="lbl_s">S</string>
<string name="lbl_login_meucomp">Login MeuComp</string>
<string name="lbl_registrar">Registrar</string>
<string name="lbl_22">22</string>
<string name="lbl_t">T</string>
<string name="lbl_27">27</string>
<string name="lbl_suas_tarefas">Suas Tarefas</string>
<string name="lbl_25">25</string>
<string name="msg_qual_o_seu_prim">Qual o seu primeiro nome?</string>
<string name="lbl_26">26</string>
<string name="msg_selecione_seu_g">Selecione seu gênero</string>
<string name="msg_pensamento_disf">Pensamento Disfuncional</string>
<string name="lbl_16_40">16:40</string>
<string name="lbl_em_casa">Em casa</string>
<string name="msg_registro_de_emo">Registro de
emoções</string>
<string name="msg_n_o_tem_uma_con">Não tem uma conta? Sign up</string>
<string name="msg_pensamentos_dis">Pensamentos
disfuncionais</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_criar_registro">Criar Registro</string>
<string name="lbl_hoje">Hoje</string>
<string name="lbl_d">D</string>
<string name="lbl_pensamento">Pensamento</string>
<string name="lbl_senti_ansiedade">Senti ansiedade</string>
<string name="msg_todas_as_catego">Todas as categorias</string>
<string name="msg_pr_ximas_tarefa">Próximas tarefas</string>
<string name="lbl_come_o">Começo</string>
<string name="msg_escrever_10_met">Escrever 10 metas e objetivos</string>
<string name="lbl_email">Email</string>
<string name="lbl_data">Data</string>
<string name="msg_data_de_nascime">Data de nascimento</string>
<string name="lbl_15_10">15:10</string>
<string name="msg_diga_o_que_acon">Diga o que aconteceu</string>
<string name="lbl_julie_watson">Julie Watson</string>
<string name="lbl_qua">Qua</string>
<string name="lbl_jan_2024">Jan 2024</string>
<string name="lbl_14_45">14:45</string>
<string name="msg_digite_seu_n_me">Digite seu número</string>
<string name="msg_aconteceu_quand">Aconteceu quando Y falou sobre X\u2028tentei me acalmar fazendo Z mas
durou H tempo.</string>
<string name="lbl_google">Google</string>
<string name="lbl_login">Login</string>
<string name="msg_pensamento_x_oc">Pensamento X ocorreu quando fiz Y,
acabei fazendo também Z e H.</string>
<string name="msg_entre_com_seu_n">Entre com seu número de celular</string>
<string name="lbl_t_tulo">Título</string>
<string name="lbl_mudar_n_mero">Mudar número?</string>
<string name="lbl_242">24</string>
<string name="lbl_samara_santos">Samara Santos</string>
<string name="lbl_outros">Outros</string>
<string name="lbl_13_05">13:05</string>
<string name="lbl_meucomp">MeuComp</string>
<string name="lbl_emo_es">Emoções</string>
<string name="msg_selecionar_cate">Selecionar Categoria</string>
<string name="lbl_ou_entrar_com">Ou entrar com</string>
<string name="msg_samarasant_gmai">samarasant@gmail.com</string>
<string name="lbl_registros">Registros</string>
<string name="msg_estabelecimento">Estabelecimento de metas</string>
<string name="msg_atualizar_perfi">Atualizar Perfil</string>
<string name="lbl_fim">Fim</string>
<string name="msg_adicionar_mai">+ Adicionar mais</string>
<string name="msg_n_o_tem_uma_con2">Não tem uma conta? </string>
<string name="msg_please_enter_valid_nu">Please enter valid number</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
