<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registrosVM" type="com.meucomp.app.modules.registros.data.viewmodel.RegistrosVM"/>
    </data>
    <FrameLayout android:id="@+id/frameRegistros"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleindigo_A200">
        <ImageView android:id="@+id/imageSearch"
            android:layout_gravity="top|start"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginBottom="@dimen/_57pxv"
            android:layout_marginEnd="@dimen/_41pxh"
            android:layout_marginStart="@dimen/_41pxh"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="@dimen/_20pxh"
            android:scaleType="fitXY" android:src="@drawable/img_search"
            tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
        <FrameLayout android:id="@+id/frameStackundrawfocusse"
            android:layout_gravity="bottom|start"
            android:layout_height="@dimen/_764pxv"
            android:layout_marginTop="@dimen/_10pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageUndrawfocusse"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_241pxh"
                android:layout_marginBottom="@dimen/_44pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_width="@dimen/_291pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_undrawfocusse}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_undrawfocusse"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtMeuComp"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_94pxh"
                android:layout_marginStart="@dimen/_94pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registrosVM.registrosModel.txtMeuComp}"
                style="@style/txtPoppinssemibold32" tools:text="@string/lbl_meucomp"/>
            <LinearLayout android:id="@+id/linearRegistro"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_4">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddnewEvent"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_10pxh"
                    android:singleLine="true"
                    android:text="@{registrosVM.registrosModel.txtAddnewEvent}"
                    style="@style/txtPoppinsblack20" tools:text="@string/lbl_registrar"/>
                <EditText
                    android:background="@drawable/rectangle_border_bluegray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/lbl_t_tulo"
                    android:id="@+id/etTextcomponent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_14pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@={registrosVM.registrosModel.etTextcomponentValue}"
                    android:textColorHint="@color/bluegray_300"
                    style="@style/etRoundedOutline" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_border_bluegray_50_radius_8"
                    android:ellipsize="end"
                    android:hint="@string/msg_diga_o_que_acon"
                    android:id="@+id/etTextboxcompon"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_30pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_14pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@={registrosVM.registrosModel.etTextboxcomponValue}"
                    android:textColorHint="@color/bluegray_300"
                    style="@style/etRoundedOutline" tools:ignore="Autofill"/>
                <LinearLayout android:id="@+id/linear02UIElements"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylecornerRadius_1">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSearching"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_weight="0.69"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:singleLine="true"
                        android:text="@{registrosVM.registrosModel.txtSearching}"
                        style="@style/txtPoppinsregular15" tools:text="@string/lbl_data"/>
                    <ImageView android:id="@+id/imageCalendar"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_17pxv"
                        android:layout_marginEnd="@dimen/_14pxh"
                        android:layout_marginStart="@dimen/_277pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_calendar_bluegray_300"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_calendar_bluegray_300"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearRow02uielements"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <EditText
                        android:background="@drawable/rectangle_border_bluegray_50_radius_8"
                        android:drawableEnd="@drawable/drawable_img_path"
                        android:drawablePadding="@dimen/_30pxh"
                        android:ellipsize="end"
                        android:hint="@string/lbl_come_o"
                        android:id="@+id/etHorarioinicial"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:paddingBottom="@dimen/_12pxv"
                        android:paddingEnd="@dimen/_13pxh"
                        android:paddingStart="@dimen/_14pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:singleLine="true"
                        android:text="@={registrosVM.registrosModel.etHorarioinicialValue}"
                        android:textColorHint="@color/bluegray_300"
                        style="@style/etRoundedOutline" tools:ignore="Autofill"/>
                    <EditText
                        android:background="@drawable/rectangle_border_bluegray_50_radius_8"
                        android:drawableEnd="@drawable/drawable_img_path1"
                        android:drawablePadding="@dimen/_30pxh"
                        android:ellipsize="end"
                        android:hint="@string/lbl_fim"
                        android:id="@+id/etHorariofinal"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:paddingBottom="@dimen/_15pxv"
                        android:paddingEnd="@dimen/_13pxh"
                        android:paddingStart="@dimen/_14pxh"
                        android:paddingTop="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@={registrosVM.registrosModel.etHorariofinalValue}"
                        android:textColorHint="@color/bluegray_300"
                        style="@style/etRoundedOutline" tools:ignore="Autofill"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnremindsme"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_55pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRemindsme"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_9pxh"
                        android:singleLine="true"
                        android:text="@{registrosVM.registrosModel.txtRemindsme}"
                        style="@style/txtPoppinsmedium17" tools:text="@string/msg_selecionar_cate"/>
                    <LinearLayout android:id="@+id/linearRowpensamento"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnPensamento"
                            android:layout_height="@dimen/_44pxv"
                            android:layout_width="@dimen/_125pxh"
                            android:letterSpacing="0.04"
                            android:lineSpacingExtra="@dimen/_7pxh"
                            android:paddingBottom="@dimen/_11pxv"
                            android:paddingEnd="@dimen/_14pxh"
                            android:paddingStart="@dimen/_13pxh"
                            android:paddingTop="@dimen/_11pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_pensamento"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_1" tools:text="@string/lbl_pensamento"/>
                        <FrameLayout
                            android:id="@+id/frameStackpathfive"
                            android:layout_height="@dimen/_44pxv"
                            android:layout_marginStart="@dimen/_16pxh" android:layout_width="@dimen/_94pxh">
                            <ImageView android:id="@+id/imagePathFive"
                                android:layout_gravity="start"
                                android:layout_height="@dimen/_44pxh"
                                android:layout_width="@dimen/_94pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_path5"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_path5"/>
                            <TextView android:ellipsize="end"
                                android:gravity="top|start"
                                android:id="@+id/txtDesign"
                                android:layout_gravity="bottom|center"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_9pxv"
                                android:layout_marginEnd="@dimen/_11pxh"
                                android:layout_marginStart="@dimen/_11pxh"
                                android:layout_marginTop="@dimen/_10pxv"
                                android:layout_width="match_parent"
                                android:letterSpacing="0.04"
                                android:lineSpacingExtra="@dimen/_7pxh"
                                android:singleLine="true"
                                android:text="@{registrosVM.registrosModel.txtDesign}"
                                style="@style/txtPoppinsmedium14_2" tools:text="@string/lbl_emo_es"/>
                        </FrameLayout>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnOutros"
                            android:layout_height="@dimen/_44pxv"
                            android:layout_marginStart="@dimen/_16pxh"
                            android:layout_width="@dimen/_105pxh"
                            android:letterSpacing="0.04"
                            android:lineSpacingExtra="@dimen/_7pxh"
                            android:paddingBottom="@dimen/_11pxv"
                            android:paddingEnd="@dimen/_26pxh"
                            android:paddingStart="@dimen/_27pxh"
                            android:paddingTop="@dimen/_11pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_outros"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_2" tools:text="@string/lbl_outros"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddnew"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.04"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{registrosVM.registrosModel.txtAddnew}"
                    style="@style/txtPoppinsmedium14_3" tools:text="@string/msg_adicionar_mai"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCriarRegistro"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_30pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_criar_registro"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_3" tools:text="@string/lbl_criar_registro"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
